# wheat_prediction

./: .gitignore  main.py  main2.py  main3.py  pyproject.toml
logs/2026-02-11_22-14-46/: metrics_federated_clients.json  metrics_federated_pooled.json
logs/2026-02-25_20-24-20/: config.json  metrics_federated_clients.json  metrics_federated_pooled.json
logs/2026-02-25_20-33-41/: metrics_federated_clients.json  metrics_federated_pooled.json
logs/2026-03-31_21-42-57/: metrics_centralized.json  metrics_federated_clients.json  metrics_federated_pooled.json  metrics_federated_rounds.json  metrics_local.json
logs/2026-04-01_15-58-54/: metrics_local.json
logs2/2026-03-31_22-30-43/: config.json  metrics_federated_clients.json  metrics_federated_pooled.json  metrics_federated_rounds.json
logs2/2026-03-31_22-38-02/: config.json  metrics_federated_clients.json  metrics_federated_pooled.json  metrics_federated_rounds.json
logs2/2026-03-31_22-40-39/: config.json  metrics_federated_clients.json  metrics_federated_pooled.json  metrics_federated_rounds.json
logs2/2026-03-31_22-42-37/: config.json  metrics_federated_clients.json  metrics_federated_pooled.json  metrics_federated_rounds.json
logs2/2026-03-31_22-49-34/: config.json  metrics_federated_clients.json  metrics_federated_pooled.json  metrics_federated_rounds.json  metrics_personalized.json
logs2/2026-04-01_16-04-53/: config.json  metrics_centralized.json  (+4 more)
prev_dataset/: wheat1_features.csv  wheat2_features.csv  wheat3_features.csv  wheat4_features.csv  wheat5_features.csv  wheat6_features.csv
